# regionalizador

./: .gitignore  AGENTS.md  README.md  package.json
.github/workflows/: ci.yml  constitution.yml
.opencode/: opencode.json
.opencode/plugins/: graphify.js
.specify/: README.md
.specify/memory/: constitution.md
.specify/scripts/: check_constitution.py  validate_spec.py
backend/: .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: schemas.py
backend/app/db/: database.py  models.py
backend/app/domain/: enums.py  exceptions.py
backend/app/services/: clustering.py  exporter.py  geocoding.py  geography.py  io_loaders.py
backend/tests/: conftest.py  test_api.py  test_clustering.py  test_exporter.py  test_geocoding.py  test_geography.py  test_io_loaders.py
docs/: graphify.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: compare-results.tsx  form-with-tabs.tsx  geocoding-form.tsx  job-status.tsx  regionalization-form.tsx  status-badge.tsx  suggest-regions-button.tsx
frontend/lib/: api.ts  filter-geojson.ts  geojson.ts  leaflet-icon-fix.ts  map-colors.ts  utils.ts
frontend/tests/: test-api-suggest.test.ts  test-compare-results.test.tsx  test-filter-geojson.test.ts  test-geocoding-form.test.tsx  test-geojson.test.ts  test-job-map.test.tsx  test-map-colors.test.ts  test-suggest-button.test.tsx  (+1 more)
history/: migration-map.md
scripts/: dev.bat  dev.ps1  dev.py  dev.sh
(+45 files in other folders)
